Updated composer, added pet class, and created subclasses

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     {
       "name": "Andrew Hinkson",
       "email": "hinkson.andrew@student.greenriver.edu"
+    },
+    {
+      "name": "Colton Matthews",
+      "email": "cmatthews4278@gmail.com"
     }
   ],
   "require":
