--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
   "require":
   {
     "bcosca/fatfree-core": "dev-master"
+  },
+  "autoload":
+  {
+    "classmap": ["classes/", "controllers/"]
   }
 }
